--- a/Quarto/pred-new-data2.qmd
+++ b/Quarto/pred-new-data2.qmd
@@ -6,6 +6,7 @@ editor: visual
 
 ```{r echo = FALSE}
 library(tidyverse)
+library(ggplot2)
 library(DBI)
 library(RSQLite)
 library(here)
@@ -76,6 +77,32 @@ for(myR2 in c(0.4, 0.7)){
 }
 ```
 
+## Calibration in the large
 
+
+```{r, fig.height = 6}
+for(what in c("est", "tau")){
+  for(myR2 in c(0.4, 0.7)){
+    for(myICC in c(0, 0.05, 0.2)){
+      for(n_studies in c(4,8,16,32,64)){
+        for(sample_size_train in c(50, 200, 1000)){
+       
+          plot_data <- calib_itl |> 
+           filter(R2 == myR2, ICC == myICC, n_studies == n_studies, study_sample_size_train == sample_size_train)
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_predict_method(what = what, ylab = what)
+          
+          plot <- plot + labs(
+            title = "Calibration in the large",
+            subtitle = glue("R-sqaured = {myR2}, ICC = {myICC}, Number of studies == {n_studies}, study sample size = {sample_size_train}"))
+          print(plot)
+  
+            
+        }
+      }
+    }
+  }
+}
+```
 
 
