--- a/Quarto/pred-new-data_calib_itl_hetro.qmd
+++ b/Quarto/pred-new-data_calib_itl_hetro.qmd
@@ -40,12 +40,11 @@ max(counts$n_est)
 ```
 
 ## Table
-
 ```{r, echo = FALSE}
-options(width = 18)
+
 full_table <- calib_itl |> 
   group_by(model, predict_method, n_studies, study_sample_size_train, ICC, R2, intercept_est_sample_size) |> 
-  quantiles_table_est() 
+  quantiles_table_tau() 
 
 print(full_table)
 
@@ -95,6 +94,8 @@ ylab = "Calibration in the Large"
   
             
 ```
+
+
 
 ```{r, fig.height = 6}
 for(what in c("est", "tau")){
