--- a/Quarto/cluster-x_perf_calib_slope.qmd
+++ b/Quarto/cluster-x_perf_calib_slope.qmd
@@ -4,7 +4,7 @@ format: html
 params:
   what: "Calibration Slope"
   file_name: "calib_slope"
-  sim_name: "240131-cluster-x"
+  sim_name: "240203-cluster-x"
 ---
 
 
@@ -24,7 +24,7 @@ file_name <- paste0(params$file_name, ".RDS")
 results_folder <- here("Results", "Database-extracts", sim_name)
 
 data_raw <- readRDS(file = here(results_folder, file_name)) 
-data <- data_raw |> tibble()
+data <- data_raw |> dplyr::filter(model != "Random intercept - ML" ) |> tibble()
 cn <- colnames(data)
 
 
@@ -35,13 +35,15 @@ cn <- colnames(data)
 ## `r what`
 
 ```{r echo = FALSE}
-for(myStudySize in c(50, 200, 1000)){
+for(my_n_studies in c(4, 8, 16, 32, 64)){
   for(myICC in c(0.05, 0.2)){
   plot <- data |> mutate(plot_value = est) |> 
-    filter(study_sample_size_train == myStudySize, ICC == myICC) |> 
+    filter(n_studies == my_n_studies, ICC == myICC) |> 
     ProfacSims:::box_plot_cluster_x() +
     ylab(glue("{what}")) +
-    labs(title = glue("{what}"), subtitle = glue("Study sample size: {myStudySize}, ICC: {myICC}"))
+    labs(title = glue("{what}"), subtitle = glue("N studies: {my_n_studies}, ICC: {myICC}")) +
+    scale_y_continuous(limits = c(0.5, 1.5))    
+
   
   print(plot)
   
@@ -54,13 +56,13 @@ for(myStudySize in c(50, 200, 1000)){
 ## Between study hetrogenetiy in `r what`
 
 ```{r echo = FALSE}
-for(myStudySize in c(50, 200, 1000)){
+for(my_n_studies in c(4, 8, 16, 32, 64)){
   for(myICC in c(0.05, 0.2)){
   plot <- data |> mutate(plot_value = sqrt(tau2)) |> 
-    filter(study_sample_size_train == myStudySize, ICC == myICC) |> 
+    filter(n_studies == my_n_studies, ICC == myICC) |> 
     ProfacSims:::box_plot_cluster_x() +
      ylab(glue("Tau")) +
-    labs(title = glue("Between study hetrogeneity in {what}"), subtitle = glue("Study sample size: {myStudySize}, ICC: {myICC}"))
+    labs(title = glue("Between study hetrogeneity in {what}"), subtitle = glue("N studies: {my_n_studies}, ICC: {myICC}"))
   
   print(plot)
   
