--- a/Quarto/lvl2_endo_calib_mse.qmd
+++ b/Quarto/lvl2_endo_calib_mse.qmd
@@ -2,8 +2,8 @@
 title: "240131-level-2-endo - Model Performance"
 format: html
 params:
-  what: "Calibration Slope"
-  file_name: "calib_slope"
+  what: "Mean Squared Error"
+  file_name: "mse"
   sim_name: "240206-lvl2-endo"
 ---
 
@@ -32,16 +32,17 @@ cn <- colnames(data)
 
 
 
-## `r what`
+
+## 'R what'
 
 ```{r echo = FALSE}
-for(my_n_studies in c(4, 8, 16, 32, 64)){
+for(myStudySize in c(50, 200, 1000)){
   for(myICC in c(0.05, 0.2)){
   plot <- data |> mutate(plot_value = est) |> 
-    filter(n_studies == my_n_studies, ICC == myICC) |> 
+    filter(study_sample_size_train == myStudySize, ICC == myICC) |> 
     ProfacSims:::box_plot_lvl2_endo() +
     ylab(glue("{what}")) +
-    labs(title = glue("{what}"), subtitle = glue("N studies: {my_n_studies}, ICC: {myICC}")) +
+    labs(title = glue("{what}"), subtitle = glue("Study sample size: {myStudySize}, ICC: {myICC}")) +
     scale_y_continuous(limits = c(0.5, 1.5))    
 
   
@@ -53,16 +54,17 @@ for(my_n_studies in c(4, 8, 16, 32, 64)){
 
 
 ```
-## Between study hetrogenetiy in `r what`
+## Tau
 
 ```{r echo = FALSE}
-for(my_n_studies in c(4, 8, 16, 32, 64)){
+for(myStudySize in c(50, 200, 1000)){
   for(myICC in c(0.05, 0.2)){
   plot <- data |> mutate(plot_value = sqrt(tau2)) |> 
-    filter(n_studies == my_n_studies, ICC == myICC) |> 
+    filter(study_sample_size_train == myStudySize, ICC == myICC) |> 
     ProfacSims:::box_plot_lvl2_endo() +
-     ylab(glue("Tau")) +
-    labs(title = glue("Between study hetrogeneity in {what}"), subtitle = glue("N studies: {my_n_studies}, ICC: {myICC}"))
+     ylab(glue("Tau"))
+
+    labs(title = glue("Between study hetrogeneity in {what}"), subtitle = glue("Study sample size: {myStudySize}, ICC: {myICC}"))
   
   print(plot)
   
