--- a/Quarto/pred-new-data_calib_itl.qmd
+++ b/Quarto/pred-new-data_calib_itl.qmd
@@ -20,6 +20,11 @@ calib_itl_raw <- readRDS(file = here(results_folder, "calib_itl.RDS"))
 
 calib_itl <- calib_itl_raw |> filter(model != "Not adjusting for study") |> 
   filter(!(predict_method == "new0" & model != "Fixed intercept"))
+
+calib_itl0 <- calib_itl_raw |> filter(predict_method == "new0", intercept_est_sample_size == 10) |> 
+  mutate(intercept_est_sample_size = 0)
+
+calib_itl_stacked <- calib_itl_raw |> filter(predict_method != "new0") |> bind_rows(calib_itl0)
 ```
 
 ## Ns
@@ -69,6 +74,66 @@ counts = calib_itl
 what = "est"
 ylab = "Calibration in the Large"
 ```
+
+```{r calib_itl_all, fig.height = 4}
+
+       
+          plot_data <- calib_itl_stacked |> 
+           filter(predict_method != "new_dynamic") 
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_ss(what = "est") 
+          
+          plot <- plot + 
+            labs(title = "Calibration in the large across all scenarios") +
+            ylab("Calibration in the large")
+          print(plot)
+  
+            
+```
+
+```{r calib_itl_hetro_small, fig.height = 8}
+
+  my_n_studies <- 4        
+  my_sample_size_train =50  
+
+          plot_data <- calib_itl_stacked |> 
+           filter(predict_method != "new_dynamic", n_studies == my_n_studies, study_sample_size_train == my_sample_size_train) |> 
+           mutate(tau = sqrt(tau2))
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_hetro(what = "tau") 
+          
+          plot <- plot + 
+            labs(title = "Hetrogeneity in Calibration in the large",
+                 subtitle = glue("Training data: {my_n_studies} studies of size {my_sample_size_train} ")) +
+            ylab("Tau")
+          print(plot)
+  
+            
+```
+
+```{r calib_itl_hetro_large, fig.height = 8}
+
+  my_n_studies <- 64        
+  my_sample_size_train =1000  
+
+          plot_data <- calib_itl_stacked |> 
+           filter(predict_method != "new_dynamic", n_studies == my_n_studies, study_sample_size_train == my_sample_size_train) |> 
+           mutate(tau = sqrt(tau2))
+
+          plot <- plot_data |> 
+            ProfacSims:::box_plot_by_pred_hetro(what = "tau") 
+          
+          plot <- plot + 
+            labs(title = "Hetrogeneity in Calibration in the large",
+                 subtitle = glue("Training data: {my_n_studies} studies of size {my_sample_size_train} ")) +
+            ylab("Tau")
+          print(plot)
+  
+            
+```
+
 
 ```{r, fig.height = 6}
 
